feat: Fügt das Spiel "Schere, Stein, Papier" hinzu

--- a/Konsolen_Spiele.cbp
+++ b/Konsolen_Spiele.cbp
@@ -41,6 +41,9 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="scheresteinpapier.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="tictactoe.c">
 			<Option compilerVar="CC" />
 		</Unit>
