--- a/Konsolen_Spiele.cbp
+++ b/Konsolen_Spiele.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="blackjack.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="eigenefunktionen.c">
 			<Option compilerVar="CC" />
 		</Unit>
